@@ -3,6 +3,8 @@ Changes in version 1.103
 
 - Added two missing header files: fmt/misc.h and fmt/multi.h
 
+- Added a ghash_set function (like ghash_add, but overwrites).
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
